fix: alignment

--- a/React/src/App.scss
+++ b/React/src/App.scss
@@ -117,6 +117,7 @@
     display: flex;
     align-items: center;
     background-color: #0e1014;
+    z-index: 2;
     justify-content: space-evenly;
 
     a {
@@ -158,7 +159,8 @@
   @media (max-width: 900px) {
     width: 100%;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding: 0 1.5rem;
     justify-content: center;
     gap: 3rem;
   }
